--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       </div>
     </div>
 
-    <!-- <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
